Settings -> Scan: Fixed allowed types checkbox visibility

--- a/app/assets/stylesheets/settings.css.scss
+++ b/app/assets/stylesheets/settings.css.scss
@@ -31,6 +31,10 @@
 
 #settings {
 
+    .setting_scan_allowed_types .checkbox {
+        display: block;
+    }
+
     .modules input {
         margin-right: 10px;
         margin-top: 10px;
